Bug 1773104: Hold a reference to the BrowsingContext when deferring the sending of a PDocAccessible constructor. r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D148747